# knot

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
include/: knot.h  knot_auto_as_tie.h  knot_ops.h  knot_type_traits.h  knot_visit_variant.h
include/knot/: area.h  auto_as_tie.h  core.h  debug.h  hash.h  map.h  operators.h  serialize.h  traversals.h  type_category.h  type_traits.h
lib/googletest/: CMakeLists.txt
test/: CMakeLists.txt  area.cpp  ast_example.cpp  auto_tie.cpp  debug.cpp  example.cpp  expr.cpp  expr_example.cpp  hash.cpp  main.cpp  map.cpp  ops.cpp  search.cpp  serialize.cpp  test.cpp  test_structs.h  visit.cpp
